2016-04-28  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-481
	
	* controlfiles/instruments/odinsmr/{odinsmr.arts,yREFERENCE.xml}:
	Updated the reference vector and returned to 1e-2 test for future
	updates to pass.

2016-04-27  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-480
	
	Parts of this is still work in progress, parts are old promises, parts
	are me finding things that I have done apt for misunderstanding while
	looking through the code in preparation of my thesis.
	
	The work in progress will still experience great changes.
	
	* src/absorption.cc: Preparations for line mixing through relaxation 
	matrix. Check in xsec_species_line_mixing_wrapper.  Work in progress.
	
	* src/lin_alg.cc:  (special_matrix_exp_and_dmatrix_exp_dx_for_rt)
	Made the parallel partial derivation executable in parallel whenever 
	not already in parallel.  
	
	* src/linemixingdata.h:  Preparation for line mixing through relaxation 
	matrix.  Setting up Band tags.   Work in progress.
	
	* src/linerecord.{cc,h}:  Preparation for line mixing through relaxation 
	matrix.  ReadFromHitranModifiedStream perhaps temporary creation.
	(Paris group has a modified HITRAN format for some files.  This might
	get merged with main reading of HITRAN by some "if" statement 
	down-the-line.  For now separation is easier.)  Also, there was a
	backwards compatibility bug for ARTSCAT4 to 5 that is now corrected.
	
	* src/m_abs.cc: Removed lingering implementation comment.
	
	* src/m_jacobian.cc:  Tries to fix error reporting in species jacobian.
	
	* src/m_linemixing.cc:  Reading routine abs_lines_per_band in preparation
	for line mixing through relaxation matrix.  Very much work in progress.
	
	* src/lineshapes.cc: Added a deprecated function that is called by anyone
	trying to access Voigt_Kuntz3/4 in accordance with old series of emails that 
	these are deprecated.  Also tried to clean-up the HTP line shape.  This entire