@@ -1,3 +1,10 @@
+2016-04-28  Simon Pfreundschuh  <simonpf@chalmers.se>
+
+	* arts-2-3-482
+
+	* src/math_funcs.cc: Fixed index order in reshape(...) and flat(...)
+	functions for Tensor3.
+
 2016-04-28  Richard Larsson   <ric.larsson@gmail.com>
 	
 	* arts-2-3-481
